# rust-esp-stm32-clock

WiFiClient/: WiFiClient.ino
rust/: Cargo.toml
rust/src/: main.rs  weather.rs
stm32f103/: c8t6.ioc
stm32f103/Core/Inc/: stm32f1xx_it.h
stm32f103/Core/Src/: main.c  ssd1306.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
