[package]
name = "rust_server"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="*"
exitfailure="*"
serde ="*"
serde_json="*"
serde_derive="*"
reqwest={version="*",features=["json"]}
tokio ={version="1.13.0",features=["full"]}
